Opened 10 years ago

Closed 10 years ago

#11107 closed bug (fixed)

arch_vm_translation_map_is_kernel_page_accessible faults because gARMPagingMethod is not set

Reported by: arvindsraj Owned by: axeld
Priority: normal Milestone: R1
Component: System/Kernel Version: R1/Development
Keywords: gsoc2014 Cc:
Blocked By: Blocking:
Platform: arm

Description

When dropping into KDL, arch_vm_translation_map_is_kernel_page_accessible faults because gARMPagingMethod is NULL. This was fixed for x86 in commit 428b9e758c30a95154f5ad0d974894ef9ae133d6 and the same fix has been applied for ARM in the patch.

Attachments (1)

Check-if-gARMPagingMethod-is-null.patch (968 bytes ) - added by arvindsraj 10 years ago.

Download all attachments as: .zip

Change History (4)

by arvindsraj, 10 years ago

comment:1 by arvindsraj, 10 years ago

patch: 01

comment:2 by anevilyak, 10 years ago

Component: - GeneralSystem/Kernel
Keywords: gsoc2014 added; gsco2014 removed
Owner: changed from nobody to axeld

comment:3 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Applied in hrev47650.

Note: See TracTickets for help on using tickets.