Check if gARMPagingMethod is null

in arch_vm_translation_map_is_kernel_page_accessible. Fix borrowed from x86
(commit 428b9e758c30a95154f5ad0d974894ef9ae133d6).

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>

Fixes #11107.