src/system/kernel/arch/arm/arch_vm_translation_map.cpp
@@ -145,5 +145,8 @@ bool
 arch_vm_translation_map_is_kernel_page_accessible(addr_t virtualAddress,
 	uint32 protection)
 {
+	if(!gARMPagingMethod)
+		return true;
+
 	return gARMPagingMethod->IsKernelPageAccessible(virtualAddress, protection);
 }
